testcases/invalid/semanticErr/sideeffect/sideEffectTypeErr04.wacc
# type mismatch: int <- string

# Output:
# #semantic_error#

# Exit:
# 200

# Program:

begin
  int i = 3;
  i *= 3;
  i %= "semantic error"
end